# edudoc-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PRD.md  PRESENTATION_NOTES.html  README.md  edudoc_infographic.html  pyproject.toml  run_classification.py
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html
infra/: DEPLOYMENT.md  deploy.sh  teardown.sh
src/: api.py  classifier.py  edu_detector.py  kyc_detector.py  llm_classifier.py  monitoring.py  privacy.py  rules_engine.py
tests/: test_api.py  test_classifier.py  test_edu_detector.py  test_kyc_detector.py  test_llm_classifier.py  test_monitoring.py  test_privacy.py  test_rules_engine.py
